--- a/etc/php/development.ini
+++ b/etc/php/development.ini
@@ -38,6 +38,8 @@ opcache.enable_cli = 1
 opcache.revalidate_freq = 0
 
 ; XDebug
+xdebug.remote_connect_back = off
+xdebug.remote_host = docker.for.mac.localhost
 xdebug.remote_enable           = 1
 xdebug.remote_connect_back     = on
 xdebug.idekey                  = "docker"
